<resources>

    <string name="app_name" translatable="false">BrewDog\'s recipes</string>

    <!-- Menu items / titles -->
    <string name="all_beers">All beers</string>
    <string name="favorite_beers">Favorite beers</string>
    <string name="more">More</string>
    <string name="share">Share</string>
    <string name="rate">Rate</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>

    <!-- Favorites -->
    <string name="favorite">Favorite</string>
    <string name="empty_section">This section is empty :(</string>
    <string name="show_all_beers">Show me all beers</string>

    <!-- Beer details -->
    <string name="abv_label">ABV</string>
    <string name="abv">%1$.1f%</string>
    <string name="ibu_label">IBU</string>
    <string name="og_label">OG</string>
    <string name="fg_label">FG</string>
    <string name="ebc_label">EBC</string>
    <string name="srm_label">SRM</string>
    <string name="volume_label">Volume:</string>
    <string name="boil_volume_label">Boil volume:</string>
    <string name="volume">%1$.1f %2$s</string>
    <string name="food_pairing">Food pairing</string>
    <string name="brewers_tips">Brewer\'s tips</string>
    <string name="brew_sheet">Brew sheet</string>
    <string name="contributed_by_punk_api">Punk API Contributor:</string>
    <string name="first_brewed">First brewed:</string>
    <string name="attenuation_level_label">Attenuation level:</string>
    <string name="ph_label">PH</string>
    <string name="description">Description</string>
    <string name="malt">Malt</string>
    <string name="hops">Hops</string>
    <string name="amount">%1$.1f %2$s</string>
    <string name="view">View</string>
    <string name="yeast">Yeast:</string>
    <string name="ingredients">Ingredients</string>
    <string name="method">Method</string>
    <string name="mash_temp">Mash temp</string>
    <string name="temp">%1$.0f° %2$s</string>
    <string name="fermentation">Fermentation:</string>
    <string name="twist">Twist</string>

    <!-- Settings -->
    <string name="synchronize_now">Synchronize now</string>
    <string name="last_synchronization_date">Last synchronization: %1$s</string>
    <string name="data">Data</string>

    <!-- About -->
    <string name="powered_by_punkapi">Powered by PunkApi v2\nhttp://punkapi.com/</string>
    <string name="brewdog_website">Thanks to BrewDog\nhttp://www.brewdog.com/</string>
    <string name="notnotme_website">This app is free and you should find the source code at\nhttp://github.com/notnotme/brewdogs_recipes</string>

    <!-- Accessibility -->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!-- Share action -->
    <string name="share_subject">Share subject</string>
    <string name="share_text">Share text</string>


</resources>
