<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_all_beers"
            android:icon="@mipmap/beers"
            android:title="@string/all_beers"
            app:actionLayout="@layout/menu_counter"/>
        <item
            android:id="@+id/nav_favorite_beers"
            android:icon="@mipmap/heart"
            android:title="@string/favorite_beers"
            app:actionLayout="@layout/menu_counter"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@mipmap/settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@mipmap/about"
            android:title="@string/about" />

        <item android:title="@string/more">
            <menu>
                <group android:checkableBehavior="none">
                    <item
                        android:id="@+id/nav_share"
                        android:icon="@mipmap/share"
                        android:title="@string/share" />

                    <item
                        android:id="@+id/nav_rate"
                        android:icon="@mipmap/star"
                        android:title="@string/rate" />
                </group>
            </menu>
        </item>

    </group>

</menu>