<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/screen_margin"
    tools:context="com.notnotme.brewdog_recipes.controller.fragment.AboutFragment">

    <TextView
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_gravity="center_horizontal"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/widget_margin_huge"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/powered_by_punkapi"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:autoLink="web"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/widget_margin_huge"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/brewdog_website"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:autoLink="web"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/widget_margin_huge"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notnotme_website"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:autoLink="web"/>

</LinearLayout>