<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/screen_margin"
    tools:context="com.notnotme.brewdog_recipes.controller.fragment.SettingsFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/data"
        android:textStyle="bold"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/widget_margin"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider"
        android:background="@color/colorPrimary"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/widget_margin"/>

    <TextView
        android:id="@+id/text_last_synchronization"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_synchronization_date"/>

    <Button
        android:id="@+id/synchronize_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/synchronize_now"/>

</LinearLayout>