<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nested_scrollview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:behavior_overlapTop="@dimen/nested_scroll_overlap"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <android.support.v7.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardElevation="@dimen/elevation"
        app:contentPadding="@dimen/screen_margin"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:id="@+id/card_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:animateLayoutChanges="true">

            <LinearLayout
                android:id="@+id/bottle_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/widget_margin">

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2.5"/>

                <ImageView
                    android:id="@+id/bottle"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/picture_list"
                    android:scaleType="fitCenter"
                    android:layout_weight="5"
                    tools:src="@mipmap/bottle_horiz"/>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2.5"/>

            </LinearLayout>

            <TextView
                android:id="@+id/tagline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="italic"
                android:textAlignment="center"
                tools:text="The beer for the real pupuces"
                android:layout_marginBottom="@dimen/widget_margin_huge"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/first_brewed"
                            android:textStyle="bold"/>

                        <Space
                            android:layout_width="@dimen/widget_margin"
                            android:layout_height="match_parent"/>

                        <TextView
                            android:id="@+id/first_brewed"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="09/2010"
                            android:textStyle="italic"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/contributed_by_punk_api"
                            android:gravity="end"
                            android:textStyle="bold"/>

                        <Space
                            android:layout_width="@dimen/widget_margin"
                            android:layout_height="match_parent"/>

                        <TextView
                            android:id="@+id/contributor"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="PE"
                            android:textStyle="italic"/>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/widget_margin_huge"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider"
                android:background="@color/colorPrimary"
                android:layout_marginTop="@dimen/widget_margin"
                android:layout_marginBottom="@dimen/widget_margin"/>

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque lorem massa, euismod eget vulputate eu, tempor quis leo."/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/food_pairing"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/widget_margin_huge"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider"
                android:background="@color/colorPrimary"
                android:layout_marginTop="@dimen/widget_margin"
                android:layout_marginBottom="@dimen/widget_margin"/>

            <TextView
                android:id="@+id/food_pairing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="● Spicy chicken tikka masala\n● Grilled chicken quesadilla"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/brewers_tips"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/widget_margin_huge"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider"
                android:background="@color/colorPrimary"
                android:layout_marginTop="@dimen/widget_margin"
                android:layout_marginBottom="@dimen/widget_margin"/>

            <TextView
                android:id="@+id/brewers_tips"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/widget_margin"
                tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque lorem massa, euismod eget vulputate eu, tempor quis leo."/>

            <TextView
                android:textAppearance="?android:textAppearanceMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/brew_sheet"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/widget_margin_huge"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider"
                android:background="@color/colorPrimary"
                android:layout_marginTop="@dimen/widget_margin"
                android:layout_marginBottom="@dimen/widget_margin"/>

            <Button
                android:id="@+id/brew_sheet_details_button"
                style="?borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:text="@string/view"/>

            <ViewStub
                android:id="@+id/brew_sheet_details"
                android:layout="@layout/brew_sheet_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    </android.support.v4.widget.NestedScrollView>